# algorithms

./: Cargo.toml  gen.py  moves.txt  pyproject.toml
