[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
numpy = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
