[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
numpy = "^1.25.1"
networkx = "^3.1"
pyink = "^23.5.0"
autograd = "^1.6.2"
jax = "^0.4.14"
jaxlib = "^0.4.14"
optax = "^0.1.7"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyink]
pyink-indentation = 2
pyink-line-length = 88
pyink-include-trailing-comma = true
